@@ -40,12 +40,11 @@ public class QueryParserTest {
         assertEquals(2, andLeft.evaluators.size());
     }
 
-    @Test public void exceptionOnUncloseAttribute() {
-        boolean threw = false;
-        try {Evaluator parse = QueryParser.parse("section > a[href=\"");}
-        catch (IllegalArgumentException e) {
-            threw = true;
-        }
-        assertTrue(threw);
+    @Test(expected = Selector.SelectorParseException.class) public void exceptionOnUncloseAttribute() {
+        Evaluator parse = QueryParser.parse("section > a[href=\"]");
+    }
+
+    @Test(expected = Selector.SelectorParseException.class)  public void testParsesSingleQuoteInContains() {
+        Evaluator parse = QueryParser.parse("p:contains(One \" One)");
     }
 }
